--- a/build.gradle
+++ b/build.gradle
@@ -87,6 +87,8 @@ project(":core") {
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile "com.esotericsoftware:kryonet:2.22.0-RC1"
+
     }
 }
 
